# Manim

./: .gitignore  AGENTS.md  INITIAL_FILES.md  README.md  REPO_LAYOUT.md  SETUP.md  START_HERE_PROMPT.md  STYLE_GUIDE.md  VIDEO_BRIEF_TEMPLATE.md  WORKFLOW.md  manim.cfg  pyproject.toml  requirements.txt
docs/: BATCH_INTEGRATION_AND_PRODUCTION_PLAN.md  CODEX_SETUP.md  DOCUMENTATION_INDEX.md  INITIAL_FILES.md  LESSON_BRIEF_GUIDE.md  README_CODEX_SECTION.md  REPO_LAYOUT.md  SETUP.md  SETUP_AND_WORKFLOW.md  STYLE_GUIDE.md  VIDEO_BRIEF_TEMPLATE.md  WEEK1_TASKS_WINDOWS.md  WORKFLOW.md  YOUTUBE_PRODUCTION_WORKFLOW_28.md
docs/proposed/: pyproject.toml
manim/: MANIM_PROGRESS_ORCHESTRATOR.md  MANIM_STYLE_GUIDE.md  MATH_QA_REPORT.md  VIDEO_MASTER_PLAN_28.md  v01_coterminal_deg.py  v02_coterminal_rad.py  v03_arc_length.py  v04_trig_ratio.py  v05_calculator_trig.py  v06_angle_conversion.py  v07_right_triangle_side_52.py  v08_trig_from_ratio.py  v09_ref_angle_deg.py  v10_ref_angle_rad.py  v11_quadrant_signs.py  v12_trig_values_info.py  v13_solve_trig_eq.py  v14_solve_right_triangle.py  v15_angle_elevation.py  v16_two_right_triangles.py  v17_drt_trig.py  v18_bearing_navigation.py  v19_oblique_area.py  v20_vector_components.py  v21_vector_ops.py  v22_vector_magnitude.py  v23_vector_direction.py  v24_vector_mag_dir_graph.py  v25_vector_from_mag_dir.py  v26_resultant_direction_vectors.py  v27_graph_vector_add.py  v28_capstone_review.py
scenes/: _template_lesson.py  intro_logo.py  lesson_001_intro.py  lesson_002_linear_equation_intro.py
scripts/: new_lesson.py  render_all_videos.ps1  (+10 more)
(+6 files in other folders)
