[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manim-math-video-starter"
version = "0.1.0"
description = "Teaching-focused starter repository for Manim Community math videos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "manim>=0.20,<0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[tool.ruff]
line-length = 100
